--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #EDEDED;
+  background-color: #F9F5F2;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
